完成需求7527 weapp后台代码

--- a/weapp/mall/templates/mall/editor/orders.html
+++ b/weapp/mall/templates/mall/editor/orders.html
@@ -219,8 +219,13 @@
 						{{/if}}
 					</td>
 					<td width="100" rowspan="${order.groups.length}">
+						{{if order.is_first_order }}<i class="xui-firstTag">首</i>{{/if}}
 						{{if order.member_id > 0}}
-							<a target="_blank" href="/member/detail/?id=${ order.member_id }">{{html order.buyer_name}}</a>
+							{{if order.member_is_subscribed > 0}}
+								<a target="_blank" href="/member/detail/?id=${ order.member_id }">{{html order.buyer_name}}</a>
+							{{else}}
+								非会员
+							{{/if}}
 							<span class="xui-buyerHint xa-buyerHint pr">
 								<i class="xa-buyerHintImg"
 									data-delivery_time="${order.delivery_time}"
