--- a/weapp/static_v2/js/view/mall_order_filter_view/template.html
+++ b/weapp/static_v2/js/view/mall_order_filter_view/template.html
@@ -69,9 +69,17 @@
 				<option value="10" data-value="10" data-name="优惠抵扣">优惠抵扣</option>
 			</select>
 		</div>
-    <div class="xui-i-item">
+    	<div class="xui-i-item">
 			<label>物流单号：</label>
 			<input type="text" class="form-control" id="express_number" name="express_number" value="" />
+		</div>
+		<div class="xui-i-item">
+			<label>订单类型：</label>
+			<select id="orderType" name="orderType" class="w120 m0">
+				<option value="-1">全部</option>
+				<option value="1">首单</option>
+				<option value="0">非首单</option>
+			</select>
 		</div>
 
 	</div>
