--- a/weapp/apps/customerized_apps/red_packet/templates/editor/red_packet_participances.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/red_packet_participances.html
@@ -187,7 +187,7 @@
 					<a href="javascript:void(0)" class="xa-pay" data-id="${item.id}" data-memberId="${item.member_id}">发放</a>
 					{{/if}}
 					{{if (item.is_already_paid === '发放' && item.msg_api_status === '失败')}}
-					<a href="javascript:void(0)" class="xa-temp_msg" data-memberId="${item.member_id}">补发模板消息</a>
+					<a href="javascript:void(0)" class="xa-temp-msg" data-memberId="${item.member_id}">补发模板消息</a>
 					{{/if}}
 				</td>
 			</tr>
@@ -320,6 +320,7 @@ $(document).ready(function() {
     });
     //补发模版消息
     $('body').delegate('.xa-temp-msg', 'click', function(){
+        var table = $('[data-ui-role="advanced-table"]').data('view');
         var $this = $(this);
         var member_id = $this.attr('data-memberId');
         W.getApi().call({
@@ -332,7 +333,7 @@ $(document).ready(function() {
             },
             success: function(resp){
                 W.showHint('',"补发模版消息成功");
-                table.reload({
+                table && table.reload({
                     id: activityId
                 }, {
                     emptyDataHint: '没有符合条件的数据'
@@ -346,6 +347,7 @@ $(document).ready(function() {
 });
 
 function pull_request(member_ids){
+    var table = $('[data-ui-role="advanced-table"]').data('view');
     W.getApi().call({
         method: 'put',
         app: 'apps/red_packet',
@@ -354,14 +356,16 @@ function pull_request(member_ids){
             id: activityId,
             member_ids: member_ids.join(',')
         },
-        success: function(resp){
+        success: function(data){
+            console.log(data);
             W.showHint('', "发放红包完成");
-            W.dialog.showDialog('W.dialog.app.red_packet.ViewGrantResultDialog', {
-                data: resp.data
-            });
-            console.log(resp.data);
+            $.isEmptyObject(data) && setTimeout(function(){
+                W.dialog.showDialog('W.dialog.app.red_packet.ViewGrantResultDialog', {
+                    data: data
+                });
+            }, 3000);
 
-            table.reload({
+            table && table.reload({
                 id: activityId
             }, {
                 emptyDataHint: '没有符合条件的数据'
