增加非微信页面引导页

--- a/weapp/webapp/templates/webapp/qrcode.html
+++ b/weapp/webapp/templates/webapp/qrcode.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//ZH-CN" "http://www.w3.org/TR/html4/loose.dtd">
+<!-- <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//ZH-CN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -37,4 +37,58 @@
         <script type="text/javascript" src="/static/js/library/spin-1.3.js"></script>
         <script type="text/javascript" src="/static/js/library/stacktrace-min-0.4.js"></script>
     </body>
-</html>
+</html> -->
+
+{% extends "webapp_content_base.html" %}
+{% block css%}
+<style>
+.xui-header{
+    display: -webkit-box;
+    -webkit-box-pack: center;
+    -webkit-box-align: center;
+    font-size: .8rem;
+    padding:12px 0;
+    color:#333;
+    background-color:#fff;
+    border-bottom: 1px solid #e3e3e8;
+}
+.xui-header img{
+    border-radius: 50%;
+    width: 42px;
+    height: 42px;
+    box-shadow: 0 0 0 1px #eee;
+    margin-right: 10px;
+}
+.xui-header span{
+    color:#00b700;
+    font-size:.9rem;
+}
+.xui-content{
+    margin-top: 30px;
+    text-align: center;
+}
+.xui-content img{
+    width: 75%;
+}
+@media (max-device-height:480px){
+    .xui-content{
+        margin-top: 20px;
+    }
+    .xui-content img{
+        width: 70%;
+    }
+}
+</style>
+{% endblock %}
+{% block content-panel %}
+<div class="xui-header clearfix">
+    <img class="pr fl" src="{{head_img}}" alt="/static/img/user-1.jpg">
+    <div class="pr fl">
+        复制微信公众号 <span class="xui-account">{{nick_name}}</span><br />
+        关注后,即可购买!
+    </div>
+</div>
+<div class="xui-content">
+    <img src="/static/img/guiding.jpg" alt="">
+</div>
+{% endblock %}
