窝夫承接页面

--- a/weapp/webapp/templates/webapp/qrcode.html
+++ b/weapp/webapp/templates/webapp/qrcode.html
@@ -1,6 +1,9 @@
 {% extends "webapp_content_base.html" %}
 {% block css%}
 <style>
+html{
+    background: #f0f0f0;
+}
 .xui-header{
     display: -webkit-box;
     -webkit-box-pack: center;
