--- a/weapp/apps/customerized_apps/exsurvey/templates/webapp/m_exsurvey.html
+++ b/weapp/apps/customerized_apps/exsurvey/templates/webapp/m_exsurvey.html
@@ -7,34 +7,39 @@
 
 {% block content-panel %}
 {{ page_html_content|safe }}
-    <div id="json_product" style="display: none;">{% for p in product_dict %}<li style="text-overflow:ellipsis;overflow: hidden;white-space: nowrap"><a href="javascript:void(0);" data-type='{"orderhasproduct_id":"{{ p.orderhasproduct_id }}","product_id": "{{ p.product_id }}","product_name":"{{ p.product_name }}","product_supplier_id": "{{ p.product_supplier_id }}","product_owner_id": "{{ p.product_owner_id }}"}'>{{ p.product_name }}</a></li>{% endfor %}</div>
 {% endblock %}
 
 {% block js %}
 <script type="text/javascript">
+var storageTimer;
 $(document).ready(function() {
-    var $freedback_type = $('#freedback_type');
+	var product_dict_json = JSON.stringify({{ product_dict|safe }});
+	var product_dict = JSON.parse(product_dict_json);
+    var $freedback_type = $('.freedback_type');
     if ($freedback_type){
         var type_title_width  =  $freedback_type.find('.wui-i-title').width();
         var padding_width = Number($freedback_type.css('padding-left').split('px')[0]) + Number($freedback_type.css('padding-right').split('px')[0]);
         var freedback_type_width =  $freedback_type.width()-padding_width-2;
         $('.type_name').width(freedback_type_width-type_title_width-15);
     }
-    var json_product = $('#json_product').html();
-    $('.xa-select-type').append(json_product);
-    if (json_product == ""){
+	var html_str = "";
+	for (var i=0; i<product_dict.length;++i){
+		html_str += "<li style='text-overflow:ellipsis;overflow: hidden;white-space: nowrap'><a href='javascript:void(0);' data-type='"+JSON.stringify(product_dict[i])+"'>"+product_dict[i].product_name+"</a></li>";
+	}
+    $('.xa-select-type').html(html_str);
+    if (html_str == ""){
         $('.type_name').html("您还没有可反馈的商品");
     }else{
         $('.type_name').html("请选择购买过的商品");
-        $('#freedback_type').click(function(){
+        $('.freedback_type').click(function(){
             var $dropmenu = $(this).next();
             if ($dropmenu.css('display') == 'none'){
                 $dropmenu.show();
-                $(this).find('#icon').addClass('arrow_up').removeClass('arrow_down')
+                $(this).find('.icon').addClass('arrow_up').removeClass('arrow_down')
             }
             else{
                 $dropmenu.hide();
-                $(this).find('#icon').addClass('arrow_down').removeClass('arrow_up')
+                $(this).find('.icon').addClass('arrow_down').removeClass('arrow_up')
             }
 
         });
@@ -42,15 +47,22 @@ $(document).ready(function() {
     $('.xa-select-type li').click(function(event){
         var $li= $(event.currentTarget);
         var type_name = $li.find('a').text();
-        $('#freedback_type').find('span[class="type_name"]').text(type_name);
-        $('#freedback_type').find('span[class="type_name"]').attr('data-product',$li.find('a').attr('data-type'));
+		var $type_name = $li.parents('.wui-i-inputContainer').find('.freedback_type').find('span[class="type_name"]');
+        $type_name.text(type_name);
+        $type_name.attr('data-product',$li.find('a').attr('data-type'));
         $li.parents('.xui-dropmenu').hide();
-        $('#icon').addClass('arrow_down').removeClass('arrow_up')
+        $li.parents('.wui-i-inputContainer').find('.icon').addClass('arrow_down').removeClass('arrow_up')
     });
     if (W.isPC) {
         $('.xa-submitTermite').unbind('click');
     }else {
         $('.xa-submitTermite').unbind('click');
+        //获取上一次的草稿信息
+        if(window.localStorage && window.localStorage.getItem(W.appRecordId)){
+            getFormData(JSON.parse(window.localStorage.getItem(W.appRecordId)));
+        }
+        //开启定时保存
+        storageTimer = window.setInterval(setFormData, 5000);
         //绑定提交按钮
         $('.xa-submitTermite').click(function() {
             if (!W.is_pic_up){
@@ -138,6 +150,79 @@ $(document).ready(function() {
             var $submitButtonContainer = $('.xa-submitButtonContainer');
             getexParticipance(participanceData,$submitButtonContainer);
         });
+
+        function getFormData(storage){
+            for(var selector in storage){
+                var one_data = storage[selector];
+                var value = one_data.value;
+                if(!one_data || !value) continue;
+                var type = one_data.type;
+                var $el = $(selector);
+                if(type == 'text' && value){
+                    $el.val(value);
+                }else if (type == 'select'){
+                    if(one_data.status){
+                       $el.addClass(value);
+                    }
+                }
+                else if(type == 'product'){
+					var one_product = one_data.data ? JSON.parse(one_data.data): '';
+					orderhasproduct_id = []
+					for (var i=0; i<product_dict.length;++i){
+						orderhasproduct_id.push(product_dict[i].orderhasproduct_id)
+					}
+					if (orderhasproduct_id.indexOf(Number(one_product.orderhasproduct_id)) ==-1){
+						one_data.data = "";
+					}
+					else{
+						$el.attr('data-product', one_data.data).html(value);
+					}
+                }
+            }
+        }
+
+        function setFormData(){
+            var data = {};
+            //多选/单选项
+            $('.xa-inputControl span[span-type=selection]').each(function(){
+                var $this = $(this);
+                var type = $this.attr('data-type');
+                var className = type == "checkbox" ? "checkbox-select" : "radio-select";
+                data["#" + $this.attr('id')] = {
+                    "type": "select",
+                    "status": $this.hasClass(className),
+                    "value": className
+                };
+            });
+            //textarea
+            $('.xa-inputControl[data-input-type=textarea]').each(function(){
+                var $this = $(this);
+                data[".xa-inputControl[data-input-type=textarea][data-input-name="+$this.attr('data-input-name')+"] textarea"] = {
+                    "type": "text",
+                    "value": $.trim($this.find('textarea').val())
+                };
+            });
+            //input
+            $('.xa-inputControl[data-input-type=text]').each(function(){
+                var $this = $(this);
+                data[".xa-inputControl[data-input-type=text][data-input-name="+$this.attr('data-input-name')+"] input"] = {
+                    "type": "text",
+                    "value": $.trim($this.find('input').val())
+                };
+            });
+            //product
+            $('.xa-inputControl[data-input-type=producttype]').each(function(){
+                var $this = $(this);
+                data[".xa-inputControl[data-input-type=producttype][data-input-name="+$this.attr('data-input-name')+"] .type_name"] = {
+                    "type": "product",
+                    "data": $this.find('.type_name').attr('data-product'),
+                    "value": $this.find('.type_name').html()
+                };
+            });
+            window.localStorage.setItem(W.appRecordId, JSON.stringify(data));
+            console.log('save temp data');
+        }
+
         function getexParticipance(participanceData,$submitButtonContainer){
             if (!slag){return;}
             slag = false;
@@ -159,7 +244,9 @@ $(document).ready(function() {
                     });
                     $('body').alertParticipantResult({prize: data.prize,actionButtons: data.actionButtons});
                     $submitButtonContainer.hide();
-                    },
+                    window.localStorage.setItem(W.appRecordId, ''); //提交后清除草稿
+                    window.clearInterval(storageTimer); //清除定时器
+                },
                 error: function(resp) {
                     if(resp.data!==""){
                         $('body').alert({
