--- a/weapp/templates/apps_base.html
+++ b/weapp/templates/apps_base.html
@@ -156,7 +156,7 @@
     </head>
     <body style="background:#f2f2f2; position:relative;">
         <!-- loading 层 -->
-        <div class="xui-loadingFrame xa-loadingFrame">
+        <div class="xui-loadingFrame xa-loadingFrame none">
             <div class="xui-loadingBox">
                 <div class="xui-loading"></div>
                 <div class="xui-loading_text">加载中...</div>
