--- a/weapp/apps/customerized_apps/red_packet/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/workbench.html
@@ -40,7 +40,7 @@
   <div style="background-color: #EAEEF7;" class="clearfix">
     <div id="leftPanel" class="fl xui-workbench-leftPanel xui-hide">
     </div>
-    
+
     <div id="phonePanel" class="xui-workbench-phonePanel xui-section fl">
       <div id="phone" class="xui-phone ">
           <div id="phoneSkin" class="xui-i-skin">
@@ -81,8 +81,7 @@
 
 {% block base_js %}
   <!-- *start_prunt_task* -->
-    <!-- [prunt_task] 
-      {
+    <!-- [prunt_task]
         "task": "weizoom-load-termite-components"
       }
     -->
@@ -108,7 +107,7 @@
 
     //是否隐藏组件控制面板
     W.hideActionPanel = true;
-    
+
     var loadPages = function(pageManagerView) {
       W.getApi().call({
         app: 'apps',
@@ -142,11 +141,11 @@
         }
       });
     }
-    
+
     $(document).ready(function() {
       var windowHeight = $(window).height();
       var height = windowHeight - 350;
-      
+
       $('#leftPanel').css('min-height' ,height+ 'px');
       $('#workbench').css('min-height' ,height+ 'px');
       $(window).bind('beforeunload', function() {
@@ -155,18 +154,18 @@
         } else {
         }
       });
-      
+
       var pageManagerView = new W.workbench.PageManagerView({
         el: '#leftPanel',
         isSystemManager: W.isSystemManager
       });
       pageManagerView.render();
-      
+
       var phoneView = new W.workbench.PhoneView({
         el: '#phonePanel'
       });
       phoneView.render();
-      
+
       var propertyViewLeft = phoneView.getRightBorderOffset() - $('#workbench').offset().left;
       var propertyView = new W.workbench.PropertyView({
         el: '#rightPanel',
@@ -174,13 +173,13 @@
         onlyShowUserProperty: true//!W.isSystemManager
       });
       propertyView.render();
-      
+
       var synchronizer = new W.workbench.PageSynchronizer();
       synchronizer.run();
       W.Synchronizer = synchronizer;
-      
+
       loadPages(pageManagerView);
-      
+
       $('.xa-save').click(function() {
           var that = this;
         // 保存model
@@ -205,6 +204,15 @@
           var upload_file_certificate = descriptionModel.get('upload_file_certificate');
           var upload_file_certificate_key = descriptionModel.get('upload_file_certificate_key');
           var wishing = descriptionModel.get('wishing');
+          //验证区间
+          var money_range_arr = money_range.split("-");
+          var money_range_min = parseFloat(money_range_arr[0]);
+          var money_range_max = parseFloat(money_range_arr[1]);
+          if(money_range_min>money_range_max){
+                console.log("好友贡献区间不合理,请重新输入！");
+                return false;
+          }
+          //end
           var args = {
             "name": name,
             "start_time": startTime,
@@ -250,9 +258,9 @@
           });
         });
       });
-      
+
       W.isReady = true;
-      
+
       W.Broadcaster.on('designpage:reach_scroll_boundary', function(direction) {
         var $window = $(window);
         var scrollTop = $window.scrollTop();
@@ -263,19 +271,19 @@
         }
         $window.scrollTop(newScrollTop);
       });
-      
+
       $('[data-toggle="tooltip"]').tooltip();
-      
+
       $('.xa-preview').click(function(event){
         var page = pageManagerView.getCurrentActivePage();
-        
+
         // 验证
         if (!W.isSystemManager) {
             if(!page.validate()) {
                 return;
             }
         }
-        
+
         // 预览
         var pageJson = JSON.stringify(page.toJSON());
         projectId = W.projectId.split(':')[2];
@@ -292,7 +300,7 @@
           }
         });
       });
-      
+
       $(document).click(function() {
       //签到奖励说明
       if(event.target.id == 'outerFunctionTrigger'){
