--- a/weapp/apps/customerized_apps/red_packet/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/workbench.html
@@ -205,13 +205,87 @@
           var upload_file_certificate_key = descriptionModel.get('upload_file_certificate_key');
           var wishing = descriptionModel.get('wishing');
           //验证区间
+          function vertify_msg(msg){
+              var vertify_msg_div = $(".propertyGroup_property_moneyRangeSelectorField .propertyGroup_property_input .errorHint");
+              vertify_msg_div.html(msg);
+              vertify_msg_div.show();
+          }
+
           var money_range_arr = money_range.split("-");
           var money_range_min = parseFloat(money_range_arr[0]);
           var money_range_max = parseFloat(money_range_arr[1]);
-          if(money_range_min>money_range_max){
+          if(money_range_min<0){
+                vertify_msg("好友贡献区间不合理,请重新输入！");
                 console.log("好友贡献区间不合理,请重新输入！");
+                W.showHint('error', '保存失败!');
+                that.disabled = false;
                 return false;
           }
+          if(money_range_max<0){
+                vertify_msg("好友贡献区间不合理,请重新输入！");
+                console.log("好友贡献区间不合理,请重新输入！");
+                W.showHint('error', '保存失败!');
+                that.disabled = false;
+                return false;
+          }
+          if(money_range_min>money_range_max){
+              vertify_msg("好友贡献区间不合理,请重新输入！");
+                console.log("好友贡献区间不合理,请重新输入！");
+                W.showHint('error', '保存失败!');
+                that.disabled = false;
+                return false;
+          }
+          var money_range_avg = (money_range_min+money_range_max)/2;
+          if(red_packet_type=="random"){
+              var red_packet_avg = parseFloat(random_total_money)/parseFloat(random_packets_number);
+              red_packet_avg = red_packet_avg.toFixed(2);
+              if(money_range_max>red_packet_avg){
+                  vertify_msg("好友贡献区间不合理,请重新输入！");
+                  console.log("好友贡献区间不合理,请重新输入！");
+                  W.showHint('error', '保存失败!');
+                  that.disabled = false;
+                  return false;
+              }
+              if(money_range_min>red_packet_avg){
+                  vertify_msg("好友贡献区间不合理,请重新输入！");
+                  console.log("好友贡献区间不合理,请重新输入！");
+                  W.showHint('error', '保存失败!');
+                  that.disabled = false;
+                  return false;
+              }
+              if(money_range_avg>=red_packet_avg){
+                  vertify_msg("好友贡献区间不合理,请重新输入！");
+                  console.log("好友贡献区间不合理,请重新输入！");
+                  W.showHint('error', '保存失败!');
+                  that.disabled = false;
+                  return false;
+              }
+          }
+
+          if(red_packet_type=="regular"){
+              if(money_range_min>regular_per_money){
+                  vertify_msg("好友贡献区间不合理,请重新输入！");
+                  console.log("好友贡献区间不合理,请重新输入！");
+                  W.showHint('error', '保存失败!');
+                  that.disabled = false;
+                  return false;
+              }
+              if(money_range_max>regular_per_money){
+                  vertify_msg("好友贡献区间不合理,请重新输入！");
+                  console.log("好友贡献区间不合理,请重新输入！");
+                  W.showHint('error', '保存失败!');
+                  that.disabled = false;
+                  return false;
+              }
+              if(money_range_avg>regular_per_money){
+                  vertify_msg("好友贡献区间不合理,请重新输入！");
+                  console.log("好友贡献区间不合理,请重新输入！");
+                  W.showHint('error', '保存失败!');
+                  that.disabled = false;
+                  return false;
+              }
+          }
+
           //end
           var args = {
             "name": name,
@@ -300,7 +374,6 @@
           }
         });
       });
-
       $(document).click(function() {
       //签到奖励说明
       if(event.target.id == 'outerFunctionTrigger'){
