--- a/weapp/apps/customerized_apps/red_packet/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/workbench.html
@@ -185,6 +185,7 @@
         // 保存model
         W.Synchronizer.manualSync(function(page, data) {
             that.disabled = true;
+          var validate_money_range = true;
           var descriptionModel = page.components[0].model;
           var name = descriptionModel.get('title');
           var startTime = descriptionModel.get('start_time')+":00";
@@ -215,75 +216,47 @@
           var money_range_min = parseFloat(money_range_arr[0]);
           var money_range_max = parseFloat(money_range_arr[1]);
           if(money_range_min<0.01){
-                vertify_msg("好友贡献区间不合理,请重新输入！");
-                console.log("好友贡献区间不合理,请重新输入！");
-                W.showHint('error', '保存失败!');
-                that.disabled = false;
-                return false;
+            validate_money_range = false;
           }
           if(money_range_max<0.01){
-                vertify_msg("好友贡献区间不合理,请重新输入！");
-                console.log("好友贡献区间不合理,请重新输入！");
-                W.showHint('error', '保存失败!');
-                that.disabled = false;
-                return false;
+            validate_money_range = false;
           }
           if(money_range_min>money_range_max){
-              vertify_msg("好友贡献区间不合理,请重新输入！");
-                console.log("好友贡献区间不合理,请重新输入！");
-                W.showHint('error', '保存失败!');
-                that.disabled = false;
-                return false;
+            validate_money_range = false;
           }
           var money_range_avg = (money_range_min+money_range_max)/2;
           if(red_packet_type=="random"){
               var red_packet_avg = parseFloat(random_total_money)/parseFloat(random_packets_number);
               red_packet_avg = red_packet_avg.toFixed(2);
-              if(money_range_max>red_packet_avg){
-                  vertify_msg("好友贡献区间不合理,请重新输入！");
-                  console.log("好友贡献区间不合理,请重新输入！");
-                  W.showHint('error', '保存失败!');
-                  that.disabled = false;
-                  return false;
+              if(money_range_max>=red_packet_avg){
+                  validate_money_range = false;
               }
-              if(money_range_min>red_packet_avg){
-                  vertify_msg("好友贡献区间不合理,请重新输入！");
-                  console.log("好友贡献区间不合理,请重新输入！");
-                  W.showHint('error', '保存失败!');
-                  that.disabled = false;
-                  return false;
+              if(money_range_min>=red_packet_avg){
+                  validate_money_range = false;
               }
               if(money_range_avg>=red_packet_avg){
-                  vertify_msg("好友贡献区间不合理,请重新输入！");
-                  console.log("好友贡献区间不合理,请重新输入！");
-                  W.showHint('error', '保存失败!');
-                  that.disabled = false;
-                  return false;
+                  validate_money_range = false;
               }
           }
 
           if(red_packet_type=="regular"){
-              if(money_range_min>regular_per_money){
-                  vertify_msg("好友贡献区间不合理,请重新输入！");
-                  console.log("好友贡献区间不合理,请重新输入！");
-                  W.showHint('error', '保存失败!');
-                  that.disabled = false;
-                  return false;
+              if(money_range_min>=regular_per_money){
+                  validate_money_range = false;
               }
-              if(money_range_max>regular_per_money){
-                  vertify_msg("好友贡献区间不合理,请重新输入！");
-                  console.log("好友贡献区间不合理,请重新输入！");
-                  W.showHint('error', '保存失败!');
-                  that.disabled = false;
-                  return false;
+              if(money_range_max>=regular_per_money){
+                  validate_money_range = false;
               }
-              if(money_range_avg>regular_per_money){
-                  vertify_msg("好友贡献区间不合理,请重新输入！");
-                  console.log("好友贡献区间不合理,请重新输入！");
-                  W.showHint('error', '保存失败!');
-                  that.disabled = false;
-                  return false;
+              if(money_range_avg>=regular_per_money){
+                  validate_money_range = false;
               }
+          }
+
+          if(!validate_money_range){
+              vertify_msg("好友贡献区间不合理,请重新输入！");
+              console.log("好友贡献区间不合理,请重新输入！");
+              W.showHint('error', '保存失败!');
+              that.disabled = false;
+              return false;
           }
 
           //end
