百宝箱拼红包 修复复制链接错误问题

--- a/weapp/apps/customerized_apps/red_packet/templates/editor/red_packets.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/red_packets.html
@@ -199,7 +199,10 @@ $(document).ready(function() {
 
     var table = $('div[data-ui-role="advanced-table"]').data('view');
     table.afterload = function(){
-        $(".xa-link-copy").attr('data-clipboard-text', window.location.origin + $(".xa-link-copy").attr('data-clipboard-text'));
+        $(".xa-link-copy").each(function(){
+            var $this = $(this);
+            $this.attr('data-clipboard-text', window.location.origin + $this.attr('data-clipboard-text'));
+        });
         var client = new ZeroClipboard( $(".xa-link-copy") , {
             moviePath: "/static_v2/zero_clipboard.swf"
         });
