--- a/weapp/static_v2/js/view/mall_order_filter_view/template.html
+++ b/weapp/static_v2/js/view/mall_order_filter_view/template.html
@@ -74,8 +74,8 @@
 			<input type="text" class="form-control" id="express_number" name="express_number" value="" />
 		</div>
 		<div class="xui-i-item">
-			<label>买家类型：</label>
-			<select id="buyerType" name="buyerType" class="w120 m0">
+			<label>订单类型：</label>
+			<select id="orderType" name="orderType" class="w120 m0">
 				<option value="-1">全部</option>
 				<option value="1">首单</option>
 				<option value="0">非首单</option>
