--- a/weapp/apps/customerized_apps/red_packet/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/workbench.html
@@ -205,6 +205,7 @@
           var upload_file_certificate = descriptionModel.get('upload_file_certificate');
           var upload_file_certificate_key = descriptionModel.get('upload_file_certificate_key');
           var wishing = descriptionModel.get('wishing');
+
           //验证区间
           function vertify_msg(msg){
               var vertify_msg_div = $(".propertyGroup_property_moneyRangeSelectorField .propertyGroup_property_input .errorHint");
@@ -270,6 +271,16 @@
           }
 
           //end
+
+          //清除可能产生的无效数据
+          if(red_packet_type=="regular"){
+              random_total_money = '';
+              random_packets_number = '';
+          }else{
+              regular_packets_number = '';
+              regular_per_money = '';
+          }
+
           var args = {
             "name": name,
             "start_time": startTime,
