百宝箱 修复微助力修改配置后页面不生效的问题

--- a/weapp/apps/customerized_apps/red_packet/templates/editor/red_packet_participances.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/red_packet_participances.html
@@ -291,8 +291,8 @@ $(document).ready(function() {
 			confirm: function() {
 				var member_ids = [];
                 $('table').find('input:checkbox:checked').each(function(){
-
-                    member_ids.push($this.parents('tr').eq(0).attr('data-memberId'));
+                	var $inner_this = $(this);
+                    member_ids.push($inner_this.parents('tr').eq(0).attr('data-memberId'));
                 });
                 if(member_ids.length <= 0){
                     W.showHint("error","请选择发放用户");
