百宝箱拼红包 修复批量发红包错误提示不全的问题

--- a/weapp/apps/customerized_apps/red_packet/templates/editor/red_packet_participances.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/red_packet_participances.html
@@ -375,6 +375,11 @@ function pull_request(member_ids){
         error: function(error){
         	console.log(error);
             W.showHint('error', error.errMsg || '发放红包失败');
+            table && table.reload({
+                id: activityId
+            }, {
+                emptyDataHint: '没有符合条件的数据'
+            });
         }
     });
 }
