--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -1395,7 +1395,7 @@ li.wui-selectBox-display-table {
     position: relative;
     background-color:#B90000;
     height: auto;
-    padding-bottom: 5rem;
+    padding-bottom: 40%;
 }
 
 .wui-red_packet-container .wui-i-background-image{
