--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -246,7 +246,7 @@
         position: relative;
         background-color: #B90000;
         height: auto;
-        padding-bottom: 7rem;
+        padding-bottom: 45%;
     }
     .wui-red_packet-container .wui-i-userinfo_group {
         position: absolute;
