--- a/weapp/termite/static/termite_js/app/component/appkit/dropdownbox/dropdownbox.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/dropdownbox/dropdownbox.html
@@ -10,15 +10,12 @@
         <div class="wui-i-inputContainer xa-inputControl" data-input-type="producttype" data-input-name="{{component.model.title}}" data-control-type="appkit.dropdownbox">
             <a class="freedback_type" data-role="button" >
                 <h1 class="wui-i-title {% if component.model.is_mandatory == "true" %}xui-mandatory{% endif %}">{{component.model.title}}</h1>
-                <span class="type_name" data-product="" data-validate="require-notempty-span::请选择{{component.model.title}}" ></span>
+                <span class="type_name" data-product="" {% if component.model.is_mandatory == "true" %}data-validate="require-notempty-span::请选择{{component.model.title}}"{% endif %} ></span>
                 <span class="icon arrow_down"></span>
             </a>
             <div class="xui-dropmenu" style="display: none">
                 <ul class="ui-dropmenu-items xa-select-type" style="-webkit-tap-highlight-color: rgba(255, 255, 255, 0);"></ul>
             </div>
         </div>
-	<!--<div class="xa-inputControl" data-input-type="textarea" data-input-name="{{component.model.title}}" data-control-type="appkit.qa">
-		<textarea class="wui-i-input" {% if component.model.is_mandatory == "true" %}data-validate='require-notempty::请填写项目"{{component.model.title}}"'{% endif %}></textarea>
-	</div>-->
 </div>
 {% endifequal %}
